constraints/deny-privilegedcontainer-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1
kind: K8sPSPPrivilegedContainer
metadata:
  name: deny-privileged-container
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
