constraints/quay-registry-only-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1
kind: K8sAllowedRepos
metadata:
  name: quay-registry-only
  annotations:
    {}
#    key: string
  labels:
    {}
#    key: string
#  namespace: string
spec:
  enforcementAction: dryrun
  parameters:
    repos:
      - quay.io
  match:
    kinds:
      - apiGroups:
          - '*'
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
      - cattle-system
    labelSelector:
      matchExpressions: []
    namespaceSelector:
      matchExpressions: []
    scope: Namespaced
